:bug: Fix sudoku color in dark mode

--- a/_sass/_sudoku.scss
+++ b/_sass/_sudoku.scss
@@ -2,6 +2,7 @@
     td, .sudoku-elem {
         border: 1px solid;
         text-align: center;
+        color: white
     }
     .part:valid {
         background-color: #adf0ad;
